--- a/Assets/UI/Inventory/InventoryStyle.uss
+++ b/Assets/UI/Inventory/InventoryStyle.uss
@@ -32,6 +32,7 @@
     border-right-width: 1px;
     border-top-width: 1px;
     border-bottom-width: 1px;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .inventory_slot_highlight {
@@ -40,6 +41,7 @@
     transform-origin: center;
     position: absolute;
     visibility: hidden;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 .preview_visual_container {
@@ -72,6 +74,69 @@
     font-size: 24px;
     -unity-font-style: bold;
     background-color: rgb(226, 137, 45);
+    border-left-color: rgb(226, 137, 45);
+    border-right-color: rgb(226, 137, 45);
+    border-top-color: rgb(226, 137, 45);
+    border-bottom-color: rgb(226, 137, 45);
+    color: rgb(238, 238, 238);
+}
+
+.button:hover {
+    flex-grow: 1;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 100%;
+    font-size: 24px;
+    -unity-font-style: bold;
+    background-color: rgb(238, 159, 77);
+    border-left-color: rgb(226, 137, 45);
+    border-right-color: rgb(226, 137, 45);
+    border-top-color: rgb(226, 137, 45);
+    border-bottom-color: rgb(226, 137, 45);
+    color: rgb(238, 238, 238);
+}
+
+.button:active {
+    flex-grow: 1;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 100%;
+    font-size: 24px;
+    -unity-font-style: bold;
+    background-color: rgb(166, 99, 29);
+    border-left-color: rgb(226, 137, 45);
+    border-right-color: rgb(226, 137, 45);
+    border-top-color: rgb(226, 137, 45);
+    border-bottom-color: rgb(226, 137, 45);
+    color: rgb(238, 238, 238);
+}
+
+.button:disabled {
+    flex-grow: 1;
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 100%;
+    font-size: 24px;
+    -unity-font-style: bold;
+    background-color: rgb(94, 68, 41);
     border-left-color: rgb(226, 137, 45);
     border-right-color: rgb(226, 137, 45);
     border-top-color: rgb(226, 137, 45);
